deployment/kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitpods
  namespace: gitpods-try
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  tls:
  - hosts:
    - try.gitpods.io
    secretName: gitpods-tls
  rules:
  - host: try.gitpods.io
    http:
      paths:
      - path: /
        backend:
          serviceName: ui
          servicePort: 80
      - path: /api
        backend:
          serviceName: api
          servicePort: 80
